@@ -1,5 +1,7 @@
 == master
 
+* Improve performance of cached dynamic state lookups by 25%
+
 == 0.7.5 / 2009-05-25
 
 * Add built-in caching for dynamic state values when the value only needs to be generated once
